<resources>
    <string name="app_name">AgriProducts</string>

    <!-- String titles -->
    <string name="title_home">Home</string>
    <string name="title_sell">Sell</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_account">Account</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="title_my_products">My Products</string>
    <string name="title_users">Users</string>
    <string name="title_products">Products</string>

    <!-- Views title -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Create an account</string>
    <string name="title_fragment_products">Products</string>
    <string name="title_fragment_sell_product">Sell a Product</string>
    <string name="title_fragment_inbox">Inbox</string>
    <string name="title_fragment_my_products">My Products</string>
    <string name="title_fragment_account">Account</string>
    <string name="title_fragment_payment">Order Details</string>
    <string name="title_fragment_credit_card">Credit Card</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">I don\'t have an account</string>
    <string name="error_login">Invalid email or password</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_invalid_password">Password is invalid</string>

    <!-- Strings related to sign up -->
    <string name="prompt_name">Complete Name</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_mobile_number">Mobile Number</string>
    <string name="prompt_address">Complete Address</string>
    <string name="prompt_activate">Activate</string>
    <string name="prompt_valid_id">Valid ID</string>
    <string name="action_upload">Upload Valid ID</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in">I already have an account.</string>
    <string name="error_sign_up">Please fill up all fields</string>
    <string name="error_valid_id">Please upload a valid id</string>
    <string name="error_greater_than_eight">Password should be greater than 8</string>
    <string name="error_confirm_password">Password doesn\'t match</string>

    <!-- Strings related to products -->
    <string name="prompt_filter">Filter</string>
    <string name="prompt_product_search">Search</string>
    <string name="prompt_product_name">Product Name</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_quantity">Quantity</string>
    <string name="prompt_unit">Unit</string>
    <string name="prompt_price">Price</string>
    <string name="prompt_seller">Seller</string>
    <string name="prompt_status">Status</string>
    <string name="prompt_product_image">Product Image</string>

    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_message">Message</string>
    <string name="action_make_an_offer">Message</string>
    <string name="action_order">Order</string>
    <string name="action_delete">Delete</string>

    <!-- Strings related to payment -->
    <string name="total">Total</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="change">Change</string>
    <string name="action_payment">Place Order </string>
    <string name="error_quantity">Invalid Quantity</string>
    <string name="error_payment_method">Invalid Payment Method</string>
    <string name="error_change">Invalid Change</string>
    <string name="error_credit">Invalid Credit</string>
    <string name="error_users">No user(s) found</string>

    <!-- region Credit Card Strings -->
    <string name="cardNumber">Card Number</string>
    <string name="expiryDate">Expiry Date</string>
    <string name="csv">CSV</string>
    <!-- endregion -->

    <!-- region Order Strings -->
    <string name="buyer">Buyer</string>
    <string name="supplier">Supplier</string>
    <string name="product">Product</string>
    <string name="status">Status</string>
    <string name="action_order_cancel">Cancel</string>
    <string name="action_order_processing">Processing</string>
    <string name="action_order_delivered">Delivered</string>
    <!-- endregion -->

    <!-- String related to selling -->
    <string name="action_product_sell">Sell Product</string>
    <string name="action_product_upload">Upload Product Picture</string>
    <string name="error_sell_product">Please fill up all fields</string>
    <string name="error_product_image">Please upload product picture</string>

    <!-- Strings related to inbox -->
    <string name="action_selling">Selling</string>
    <string name="action_buying">Buying</string>
    <string name="error_inbox">No messages</string>

    <!-- Strings related to messaging -->
    <string name="prompt_message">Enter Message</string>
    <string name="prompt_content">Content here</string>
    <string name="prompt_details">Details here</string>
    <string name="action_send">Send</string>
    <string name="error_message">No messages</string>

    <!-- Strings related to account -->
    <string name="action_save_user">Save</string>
    <string name="action_edit_user">Edit Account</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_logout">Logout</string>

    <!-- Strings related to admin -->
    <string name="action_admin_add">Add Admin</string>
    <string name="action_user_activate">Activate</string>
    <string name="action_user_delete">Delete</string>

    <!-- Strings related to network errors -->
    <string name="error_network_timeout">Network Timeout</string>
    <string name="error_auth_failure">Authentication Failure</string>
    <string name="error__server">Server Error</string>
    <string name="error__network">Network Error</string>
    <string name="error__parse">Parse Error</string>
    <string name="error_response">No Response</string>

    <string name="google_maps_key">AIzaSyCe40ZfvQ0tshWoktKRv3sfwXaQ9o0Fswk</string>
</resources>
