<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/title_sell" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_inbox_black_24dp"
        android:title="@string/title_inbox" />


    <item
        android:id="@+id/navigation_my_products"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:title="@string/title_my_products"/>

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_account" />
</menu>
