<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:text="@string/title_fragment_account"
        android:textSize="@dimen/frag_title_size"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAdminName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fragment_vertical_margin"
                android:textStyle="bold"
                android:textSize="@dimen/edit_text_font_size"
                android:text="@string/prompt_name"/>

            <TextView
                android:id="@+id/txtAdminEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fragment_vertical_margin"
                android:textStyle="bold"
                android:textSize="@dimen/edit_text_font_size"
                android:text="@string/prompt_email"/>

            <Button
                android:id="@+id/btnAdminChangePassowrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_vertical_margin"
                android:text="@string/action_change_password"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnAdminAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_vertical_margin"
                android:text="@string/action_admin_add"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnAdminLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_vertical_margin"
                android:text="@string/action_logout"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>