<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/fragment_horizontal_margin">

    <TextView
        android:id="@+id/txtTitleSell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_margin"
        android:text="@string/title_fragment_sell_product"
        android:textSize="@dimen/frag_title_size"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitleSell">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgSellProduct"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:layout_marginBottom="@dimen/fragment_vertical_margin"
                android:contentDescription="@string/prompt_product_image"
                android:src="@drawable/ic_add_a_photo_black_70dp"
                android:background="@android:color/darker_gray"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerInside"/>

            <TextView
                android:id="@+id/txtSellError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorError"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/error_vertical_margin"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtSellProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_product_name"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtSellLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_location"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtSellPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_price"
                    android:inputType="numberDecimal"
                    android:imeActionId="6" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtSellQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_quantity"
                    android:imeActionId="6"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtSellDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_description"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_vertical_margin"
                android:text="@string/action_product_sell"
                android:textStyle="bold"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
